--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,35 +1,42 @@
+
 .container {
-  max-width: 400px;
-  margin: 0 auto;
+  background-color: #f2f2f2;
   padding: 20px;
-  background-color: #fff;
+  border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 50px;
 }
 
-h2 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.login-form {
+#login-form {
   display: flex;
   flex-direction: column;
 }
 
-label {
-  font-weight: bold;
-  margin-bottom: 5px;
+#login-form > * {
+  margin-bottom: 10px;
 }
 
-input {
+#login-form label,
+#login-form input[type="email"],
+#login-form input[type="password"] {
+  text-align: left;
+  width: 100%;
+  box-sizing: border-box;
   padding: 10px;
-  margin-bottom: 15px;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
 
-button {
-  padding: 10px;
+#login-form label {
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+#login-button {
+  padding: 14px;
+  font-size: 24px;
+  width: 100%;
   background-color: #006400;
   color: #fff;
   border: none;
@@ -37,6 +44,18 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+#login-button:hover {
   background-color: #004d00;
+}
+
+#login-button {
+  margin: 0 auto;
+}
+
+#login-form label[for="id_email"] {
+  display: block;
+}
+
+#login-form label[for="id_password"] {
+  display: block;
 }
