--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,12 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+
 header {
     background-color: #006400;
-    padding: 10px;
+    padding: 15px;
 }
 
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-family: 'Dancing Script', cursive; /* Apply the font to the entire navbar */
 }
 
 nav ul {
@@ -18,14 +21,20 @@ nav ul {
 }
 
 nav ul li {
-    margin: 0 10px;
+    margin: 0 22px;
 }
 
 nav ul li a {
     text-decoration: none;
     color: white;
+    font-size: 28px;
+    font-weight: 600;
+    padding: 10px 20px;
+     transition: background-color 0.3s ease-in-out;
 }
 
 nav ul li a:hover {
-    text-decoration: underline;
+    background-color: rgba(0, 0, 0, 0.1);
+    font-size: 26px;
+    padding: 12px 22px;
 }
