--- a/templates/leftovers.html
+++ b/templates/leftovers.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 {% load static %}
 
 {% block title %}Leftover Resell - Wikipedia Statistics{% endblock %}
